syntax = "proto3";

package golem.shardmanager.v1;

import "golem/common/error_body.proto";

message ShardManagerError {
  oneof error {
    golem.common.ErrorBody invalid_request = 1;
    golem.common.ErrorBody timeout = 2;
    golem.common.ErrorBody unknown = 3;
  }
}
